Habit Section with Responsive

--- a/index.html
+++ b/index.html
@@ -61,6 +61,38 @@
     </div>
   </div>
 </section>
-  
+
+<!-- Habit Section HERE -->
+ 
+<section class="Habit Section">
+  <div class="container">
+    <div class="habit-para">
+      <p class="habit-para1">Change Your Habits</p>
+      <p class="habit-para2">We believe fitness should be accessible to everyone, everywhere, regardless of income or<br> access to a gym.</p>
+    </div>
+  <div class="habit-main-div">
+      <div class="habit-img-text">
+        <img src="images/image 3.png">
+        <p class="habit-img-para1">Movement</p>
+        <p class="habit-img-para2">We believe fitness should be <br> accessible to everyone</p>
+      </div>
+      <div class="habit-img-text">
+        <img src="images/image 2.png">
+        <p class="habit-img-para1">Time</p>
+        <p class="habit-img-para2">We believe fitness should be <br> accessible to everyone</p>
+      </div>
+      <div class="habit-img-text">
+        <img src="images/image 4.png">
+        <p class="habit-img-para1">Practice</p>
+        <p class="habit-img-para2">We believe fitness should be <br> accessible to everyone</p>
+      </div>
+      <div class="habit-img-text">
+        <img src="images/image 5.png">
+        <p class="habit-img-para1">Weight loss</p>
+        <p class="habit-img-para2">We believe fitness should be <br> accessible to everyone</p>
+      </div>
+  </div>
+  </div>
+ </section> 
 </body>
 </html>
