Tarining section & Responsive Done

--- a/index.html
+++ b/index.html
@@ -94,5 +94,31 @@
   </div>
   </div>
  </section> 
+ <section class="run">
+  <div class="container">
+    <div class="run-main-div">
+      
+        <div class="run-right-div">
+          <p class="run-para1">Run an Extra <br>Mile Easily</p>
+          <p class="run-para2">We believe fitness should be accessible to everyone,<br> everywhere, regardless of income or access to a gym. With<br> hundreds of professional workouts.</p>
+          <button class="run-btn">Join Now</button>
+        </div>
+          <div class="run-img">
+            <img src="images/run-ff.JPG">
+          </div>
+      
+    </div>
+  </div>
+ </section>
+ <section class="BMI-Cal">
+  <div class="container">
+    <div>
+      <p class="cal-para1">BMI Calculator</p>
+      <p class="cal-para2">We believe fitness should be accessible to everyone, everywhere, regardless of income or <br> access to a gym.</p>
+    </div>
+
+  </div>
+
+ </section>
 </body>
 </html>
