Some Changed For Responsive 576PX

--- a/index.html
+++ b/index.html
@@ -5,13 +5,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Fitness</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"/>
+  <link href="https://fonts.cdnfonts.com/css/miama" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="media.css">
 </head>
 <body>
-<section class="top-section">
+<section>
   
-  <div class="container">
+  <div class="top-section">
+    <div class="container">
       <nav>
     
         <div class="flex-nav">
@@ -34,7 +36,7 @@
      </nav>
     <div class="top-main-div">
       <div class="top-div-right">
-       <p class="top-para1">Get body in <br> shape & <span>stay</span> <br> healthy</p>
+       <p class="top-para1">Get body in <br> <span>shape</span> & stay <br> healthy</p>
        <P class="top-para2" >A huge selection of healthy and fitness content, healthy recipes<br> and transformation stories to help you get fit and stay fit!</P>
       <div>
         <button class="top-btn1">Join Club Now!</button>
@@ -60,6 +62,8 @@
       </div>
     </div>
   </div>
+  </div>
+ 
 </section>
 
 <!-- Habit Section HERE -->
