Some Changes For Responsive

--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
  
    
  <div  class="right-cal">
-     <div >
+     <div class="Your-425px-bMi">
        <p class="cal-right-para1">Calculate your BMI</p>
        <p class="cal-right-para2">We believe fitness should be accessible to everyone, everywhere, regardless of <br> income or access to a gym.</p>
      </div>
